cli/out
   Compiling clickr-cli v0.1.0 (/Users/timothyblamires/school/capstone/clickr/cli)
error[E0308]: `match` arms have incompatible types
   --> src/lex.rs:127:31
    |
79  |               match self.bytes.get(self.cur) {
    |               ------------------------------ `match` arms have incompatible types
...
109 |                   Some(b'\n') => Some(self.create_token(TokenType::Newline, 1)),
    |                                  ---------------------------------------------- this is found to be of type `Option<Token<'_>>`
...
127 |                   Some(b'"') => match STRING_REGEX.find(&self.bytes[self.cur..]) {
    |  _______________________________^
128 | |                     Some(str_lit) => {
129 | |                         return Some(self.create_token(TokenType::StringLit, str_lit.end()))
...   |
138 | |                     ),
139 | |                 },
    | |_________________^ expected `Option<Token<'_>>`, found `()`
    |
    = note:   expected enum `Option<Token<'_>>`
            found unit type `()`

warning: unused variable: `t`
   --> src/ast.rs:116:18
    |
116 |             Some(t) => {
    |                  ^ help: if this is intentional, prefix it with an underscore: `_t`
    |
    = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0308`.
warning: `clickr-cli` (lib) generated 1 warning
error: could not compile `clickr-cli` (lib) due to 1 previous error; 1 warning emitted
